<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="#A7DEE9">

    <!-- Add a welcome to QRMonster text-->
    <TextView
        android:id="@+id/welcome_to_qrmonster"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="16dp"
        android:text="@string/welcome_to_qrmonster"
        android:textColor="#EDF3F2"
        android:textSize="24sp"
        android:textStyle="bold" />

    <!-- Add a TextView for the username, email, and phone number -->
    <TextView
        android:id="@+id/usernameTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="#A7DEE9"
        android:padding="16dp"
        android:text="@string/username_"
        android:textColor="#E4E9EC"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/emailTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="16dp"
        android:text="@string/email"
        android:textColor="#EEF1F3"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/phoneNumberTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="16dp"
        android:text="@string/phone_numberr"
        android:textColor="#EEF1F3"
        android:textSize="18sp" />

    <!-- Add buttons for QR code scanning, viewing QR codes, searching users, and viewing the leaderboard -->
    <Button
        android:id="@+id/scanQRCodeButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#EAAF26"
        android:onClick="scanQRCode"
        android:text="@string/scan_qr_code"
        android:textColor="#F3F0EF" />

    <Button
        android:id="@+id/searchNearbyQRButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#EAAF26"
        android:text="@string/search_nearby_qr_codes"/>

    <Button
        android:id="@+id/viewMyQRCodesButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#EAAF26"
        android:onClick="viewMyQRCodes"
        android:text="@string/view_my_qr_codes"
        android:textColor="#F3F0EF" />

    <Button
        android:id="@+id/searchUsersButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#EAAF26"
        android:onClick="searchUsers"
        android:text="@string/search_users_"
        android:textColor="#F8F4F2" />

    <Button
        android:id="@+id/viewLeaderboardButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#EAAF26"
        android:onClick="viewLeaderboard"
        android:text="@string/view_leaderboard_"
        android:textColor="#F8F5F4" />

    <Button
        android:id="@+id/viewCurrentLocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#EAAF26"
        android:text="@string/view_current_location"
        android:textColor="#F4F3F2" />

    <TextView
        android:id="@+id/tv_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/location"
        android:textColor="#F0F4F6" />

</LinearLayout>
