<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#A7DEE9">

    <!-- Toolbar -->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="#EAAF26"
        android:minHeight="?actionBarSize">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="Search for other users "
        android:textColor="#616161"
        android:textSize="30sp"
        android:textStyle="bold" />

    </androidx.appcompat.widget.Toolbar>
    <!-- Search bar -->
    <LinearLayout
        android:id="@+id/search_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp">

        <EditText
            android:id="@+id/search_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/search_users_hint"
            android:minHeight="48dp"
            android:padding="8dp"
            android:autofillHints=""
            android:inputType="text"
            tools:ignore="VisualLintTextFieldSize" />

        <Button
            android:id="@+id/search_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#EAAF26"
            android:text="@string/search_button_text"
            android:textColor="#FFFFFF"
            tools:ignore="TouchTargetSizeCheck" />


    </LinearLayout>

    <!-- List of users -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/user_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_margin="8dp"
        android:clipToPadding="false"
        android:padding="8dp"
        android:scrollbars="vertical" />

    <Button
        android:id="@+id/back_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#EAAF26"
        android:text="@string/back_to_home"
        android:textColor="#FFFFFF"
        tools:ignore="VisualLintButtonSize" />

</LinearLayout>
